--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "nextjs-blog-template",
+  "name": "blog.bentotailwind.com",
   "author": {
-    "name": "Kiran K",
-    "email": "kiran@boxyhq.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/devkiran/nextjs-blog-template"
+    "name": "Emre Altug"
   },
   "version": "1.0.0",
   "private": true,
@@ -47,18 +42,12 @@
     "eslint-config-next": "^12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
-    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
