--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
-    "format": "prettier --write .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
