--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "check-types": "tsc --pretty --noEmit",
-    "check-format": "prettier --check .",
-    "check-lint": "eslint . --ext ts --ext tsx --ext js",
-    "format": "prettier --write ."
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
